Added layout folder, added ipykernel, removed pytest (who needs testing anyway)

--- a/src/environment.yml
+++ b/src/environment.yml
@@ -16,9 +16,8 @@ dependencies:
   - seaborn
   - scikit-learn
   - numba
-  - notebook
+  - ipykernel
   - ipywidgets
-  - pytest
   - pip
   - pip:
     - imageio-ffmpeg
